@@ -1,6 +1,8 @@
-def print_something(something):
-    print('something')
+def echo(text_one, text_two):
+    print('text_one: ' + text_one)
+    print('text_two: ' + text_two)
 
 
-if __name__ == '__main__':
-    print_something('Hello world')
+def echo_helloworld():
+    print('Hello world')
+
